--- a/public/v4/apps/keycloak-no-db.yml
+++ b/public/v4/apps/keycloak-no-db.yml
@@ -82,7 +82,7 @@ caproverOneClickApp:
 
 
             IMPORTANT: It will take up to 1 minutes for Keycloak to be ready. Before that, you might see 502 error page.
-    displayName: 'Keycloak'
+    displayName: 'Keycloak - No Database'
     isOfficial: false
     description: Keycloak is an open source identity and access management solution
     documentation: Taken from https://github.com/keycloak/keycloak-containers/blob/main/docker-compose-examples/keycloak-postgres.yml
