--- a/public/v4/apps/keycloak-no-db.yml
+++ b/public/v4/apps/keycloak-no-db.yml
@@ -16,12 +16,14 @@ services:
                 - FROM quay.io/keycloak/keycloak:$$cap_keycloak_version as builder
                 - ENV KC_HEALTH_ENABLED=true
                 - ENV KC_METRICS_ENABLED=false
+
                 - RUN /opt/keycloak/bin/kc.sh build
 
                 - FROM quay.io/keycloak/keycloak:$$cap_keycloak_version
                 - COPY --from=builder /opt/keycloak/ /opt/keycloak/
+
                 - WORKDIR /opt/keycloak
-                - ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start", "--optimized", "--proxy=edge"]
+                - ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start", "--optimized", "--verbose"]
 
 caproverOneClickApp:
     variables:
