--- a/public/v4/apps/keycloak-no-db.yml
+++ b/public/v4/apps/keycloak-no-db.yml
@@ -23,7 +23,7 @@ services:
                 - COPY --from=builder /opt/keycloak/ /opt/keycloak/
 
                 - WORKDIR /opt/keycloak
-                - ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start", "--optimized", "--proxy", "edge"]
+                - ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start", "--optimized", "--proxy-headers=forwarded", "--hostname-strict=false"]
 
 caproverOneClickApp:
     variables:
