--- a/public/v4/apps/wiki-js-no-db.yml
+++ b/public/v4/apps/wiki-js-no-db.yml
@@ -8,7 +8,7 @@ services:
             DB_USER: $$cap_DB_USER 
             DB_PASS: $$cap_DB_PASS
             DB_NAME: $$cap_DB_NAME 
-        image: requarks/wiki:$$cap_version
+        image: ghcr.io/requarks/wiki:$$cap_version
         restart: always
         caproverExtra:
             containerHttpPort: '3000'
